[package]
name = "mwc-libp2p-tokio-socks5"
edition = "2018"
description = "TCP/IP (via a SOCKS5 proxy) transport protocol for libp2p"
version = "0.7.1"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "GPL-3.0"
repository = "https://github.com/mwcproject/libp2p-tokio-socks5"
keywords = ["socks", "tor", "peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
exclude = ["rustfmt.toml"]

[dependencies]
data-encoding = "2.3"
futures = "0.3"
futures-timer = "3.0"
if-addrs = "0.6.5"
ipnet = "2.3"
mwc-libp2p = { git = "https://github.com/mwcproject/rust-libp2p", branch = "master", version="0.35.2", default-features = false }
#libp2p = { path = "../rust-libp2p", default-features = false }
log = "0.4"
socket2 = "0.3"
tokio = { version = "0.2", features = ["tcp"] }
tokio-socks = "0.2"

[dev-dependencies]
anyhow = "1.0"
mwc-libp2p = { git = "https://github.com/mwcproject/rust-libp2p", branch = "master", version="0.35.2", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping"] }
#libp2p = { path = "../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping"] }
env_logger = "0.8"
structopt = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "tcp"] }
